# tua-yerli-uydu-afet-entegrasyonu

./: .gitignore  README.md
backend/: Cargo.toml
backend/deprem-core/: Cargo.toml
backend/fetch/: Cargo.toml
backend/fetch/src/: lib.rs  models.rs
backend/tah/: Cargo.toml
backend/tah/src/: main.rs
frontend/: index.html  package-lock.json  package.json
frontend/components/: alert-system.js  analysis-dashboard.js  app-shell.js  control-panel.js  route-planner.js  satellite-map.js
frontend/services/: api-service.js  event-bus.js
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/styles/: main.css
llm-model/: README.md  lora_config.yaml  requirements.txt  run.py
llm-model/data/: eval.jsonl  generate_training_data.py  train.jsonl  valid.jsonl
llm-model/src/api/: main.py
llm-model/src/core/: config.py
llm-model/src/data/: processor.py
llm-model/src/model/: trainer.py
