[workspace]
members = ["deprem-core","fetch",
   "tah",
]
resolver = "3"


[workspace.dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
chrono = "0.4.44"
deprem-core = { path = "../deprem-core" }
fetch = { path = "./fetch" }
